--- a/scss/pc/homepage/homepage.scss
+++ b/scss/pc/homepage/homepage.scss
@@ -322,13 +322,13 @@
 						margin-left: 20px;
 
 						span {
-							margin-left: 80px;
 							color: #222;
 							text-align: center;
 							font-family: 'Judson';
 							font-size: 40px;
 							font-weight: 500;
 							text-transform: capitalize;
+							white-space: nowrap;
 						}
 
 						p {
